--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
  "short_name": "",
- "name": "Sudo",
+ "name": "",
  "theme_color": "#000000",
  "background_color": "#000000",
  "display": "standalone",
